# NovelReader

./: .gitignore  LICENSE  README.md
Backend/: CMakeLists.txt
Backend/ggml/src/ggml-cuda/: conv-transpose-1d.cu  ggml-cuda.cu
Backend/ggml/src/ggml-cuda/vendors/: hip.h
Backend/src/: CMakeLists.txt  qwen3_tts.cpp  qwen3_tts.h
BackendServer/: CMakeLists.txt  Readme.md  Readme_zh.md  tts_server.cpp
BackendServer/convert_model/: convert-higgs-tts-to-gguf.py
BackendServer/ggml/include/: ggml.h
BackendServer/ggml/src/: ggml.c
BackendServer/ggml/src/ggml-cpu/: ggml-cpu.c  ops.cpp  ops.h
BackendServer/ggml/src/ggml-cuda/: ggml-cuda.cu  im2col_rafa.cu  im2col_rafa.cuh  snake_1d.cu  snake_1d.cuh
BackendServer/src/: CMakeLists.txt  Fish2.cpp  higgs_BAR.cpp  higgs_BAR.h  higgs_cli.cpp  higgs_decode.cpp  higgs_decode.h  higgs_prefill.cpp  higgs_prefill.h  higgs_rvq_encode.h  higgs_server.cpp  higgs_tts.cpp  higgs_tts.h  qwen3_tts.cpp  qwen3_tts.h  qwen3tts_server.cpp
BackendServer/src/core/: conv.h  conv_decomp.h  ctc.h  gguf_loader.cpp
BackendServer/src/s2/: s2_audio.cpp  s2_audio.h  s2_codec.cpp  s2_codec.h  s2_generate.cpp  s2_log.cpp  s2_model.cpp  s2_pipeline.cpp  s2_prompt.cpp  s2_sampler.cpp  s2_tokenizer.cpp  s2_voice.cpp
BackendServer/tools/higgs_quantize/: CMakeLists.txt  main.cpp
Reader_Demo/: bridge_reader_gui.py  fanqie_tts_bridge.user.js  qidian_tts_bridge.user.js  reader_qt.py  reader_qt_server.py  requirements.txt  sfacg_tts_bridge.user.js  simple_tts_gui.py
Test/: Program.cs  TTS-TEST.csproj  TTS-TEST.sln
